--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -108,7 +108,7 @@
             app:layout_constraintTop_toBottomOf="@id/tips_option" />
 
         <Button
-            android:id="@+id/calculate_tip"
+            android:id="@+id/calculate_button"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
@@ -122,8 +122,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
-            tools:text="Tip Amount: $10"
+            tools:text="Tip Amount:$10.00"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/calculate_tip" />
+            app:layout_constraintTop_toBottomOf="@id/calculate_button" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 </ScrollView>
